# AI-Job-Market-Trend-Analysis

./: README.md  pyproject.toml  test.py
notebooks/: database.ipynb
scripts/: db_init.sql
scripts/bronze/: ddl_bronze.sql  proc_load_bronze.sql
scripts/gold/: gold_ddl.sql
scripts/silver/: ddl_silver.sql  proc_load_silver.sql
scripts/test/: test.sql
