[project]
name = "job-market-trend-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.12",
    "pandas>=2.3.1",
    "pymysql>=1.1.1",
    "pyodbc>=5.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "torch>=2.7.1",
]
 